- fix(config): 修正API基础URL并添加本地环境文件到gitignore - 将.env.local添加到gitignore以防止本地配置文件被提交

--- a/.env.local
+++ b/.env.local
@@ -4,4 +4,4 @@
 # Notion页面ID,必须
 # NOTION_PAGE_ID=263fb53324238047aec4ea524d97eba4
 
-API_BASE_URL=https://www.muyiblog.notion.site/api/v3
+API_BASE_URL=https://muyiblog.notion.site/api/v3
